--- a/src/gallery.html
+++ b/src/gallery.html
@@ -31,7 +31,7 @@ banner:
                     <source srcset="/images/properties/before-after/after_living_room-1920.webp" media="(min-width: 1280px)" type="image/webp">
                     <source srcset="/images/properties/before-after/after_living_room-1280.webp" media="(min-width: 960px)" type="image/webp">
                     <source srcset="/images/properties/before-after/after_living_room-640.webp" media="(min-width: 640px)" type="image/webp">
-                    <img src="/images/properties/before-after/after_living_room.jpg"
+                    <img src="/images/properties/before-after/after_living_room.webp"
                          alt="Living room after renovation with new flooring"
                          class="w-full h-full object-cover">
                 </picture>
@@ -45,7 +45,7 @@ banner:
                         <source srcset="/images/properties/before-after/patio_wood-1920.webp" media="(min-width: 1280px)" type="image/webp">
                         <source srcset="/images/properties/before-after/patio_wood-1280.webp" media="(min-width: 960px)" type="image/webp">
                         <source srcset="/images/properties/before-after/patio_wood-640.webp" media="(min-width: 640px)" type="image/webp">
-                        <img src="/images/properties/before-after/patio_wood.jpg"
+                        <img src="/images/properties/before-after/patio_wood.webp"
                              alt="Patio before renovation showing worn wood flooring"
                              class="w-full h-full object-cover">
                     </picture>
