--- a/src/get-started.html
+++ b/src/get-started.html
@@ -343,8 +343,9 @@ banner:
             <!-- Seller Story -->
             <div class="bg-brand-beige p-8 rounded-xl">
                 <div class="flex items-center gap-4 mb-6">
-                    <img src="/images/icons/021-family.png" alt="Home seller story icon" class="w-12 h-12"
-                        loading="lazy" decoding="async" />
+                    <div class="w-12 h-12 bg-brand-navy rounded-full flex items-center justify-center text-white text-lg">
+                        🏠
+                    </div>
                     <div>
                         <h3 class="font-bold text-brand-navy">Maria Rodriguez - Texas Homeowner</h3>
                         <p class="text-sm text-slate-600">Sold her 3-bedroom home for purpose</p>
@@ -361,8 +362,9 @@ banner:
             <!-- Veteran Story -->
             <div class="bg-blue-50 p-8 rounded-xl">
                 <div class="flex items-center gap-4 mb-6">
-                    <img src="/images/icons/035-usa.png" alt="Veteran story icon" class="w-12 h-12"
-                        loading="lazy" decoding="async" />
+                    <div class="w-12 h-12 bg-green-600 rounded-full flex items-center justify-center text-white text-lg">
+                        🇺🇸
+                    </div>
                     <div>
                         <h3 class="font-bold text-brand-navy">Sergeant James Wilson - Iraq Veteran</h3>
                         <p class="text-sm text-slate-600">Found sanctuary through Properties 4 Creation property</p>
