--- a/src/impact.html
+++ b/src/impact.html
@@ -5,7 +5,7 @@ description: "Affordable housing solutions for families and veterans in East Tex
 banner:
   title: "Real Families, Real Sanctuaries"
   subtitle: "See the human impact of fair housing through stories of veterans rebuilding their futures."
-  image: "banners/hero-impact-banner.webp"
+  image: "hero-impact-banner.webp"
   video: "hero-impact-banner.mp4"
   eyebrow: "Community Impact"
   ctaText: "Share Your Story"
@@ -165,12 +165,9 @@ banner:
             <!-- Story Card 1 -->
             <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                 <div class="flex items-start gap-4">
-                    <picture class="w-16 h-16 rounded-full">
-                        <source srcset="/images/avatars/team/team-placeholder.webp" type="image/webp">
-                        <img src="/images/avatars/team/team-placeholder.png" alt="Martinez family photo"
-                            class="w-16 h-16 rounded-full object-cover"
-                            onerror="this.src='/images/icons/021-family.png'" loading="lazy" decoding="async">
-                    </picture>
+                    <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg">
+                        👨‍👩‍👧‍👦
+                    </div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-2">The Martinez Family</h3>
                         <div class="flex items-center gap-2 mb-3">
@@ -200,8 +197,9 @@ banner:
             <!-- Story Card 2 -->
             <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                 <div class="flex items-start gap-4">
-                    <img src="/images/icons/034-soldier.png" alt="Staff Sgt. Thompson veteran photo"
-                        class="w-16 h-16 rounded-full object-cover" loading="lazy" decoding="async">
+                    <div class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-lg">
+                        🪖
+                    </div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-2">Staff Sgt. Thompson</h3>
                         <div class="flex items-center gap-2 mb-3">
@@ -230,8 +228,9 @@ banner:
             <!-- Story Card 3 -->
             <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                 <div class="flex items-start gap-4">
-                    <img src="/images/icons/022-family-1.png" alt="Garcia seniors family photo"
-                        class="w-16 h-16 rounded-full object-cover" loading="lazy" decoding="async">
+                    <div class="w-16 h-16 bg-orange-500 rounded-full flex items-center justify-center text-white text-lg">
+                        👴👵
+                    </div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-2">The Garcia Seniors</h3>
                         <div class="flex items-center gap-2 mb-3">
@@ -306,11 +305,11 @@ banner:
         </p>
 
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="/projects.html"
+            <a href="/projects/"
                 class="wood-gradient-button px-8 py-4 rounded-xl font-semibold shadow-wood hover:shadow-xl transition-all">
                 Browse Affordable Homes for Families & Veterans
             </a>
-            <a href="/contact.html"
+            <a href="/contact/"
                 class="px-8 py-4 border-2 border-white text-white hover:bg-white hover:text-brand-navy rounded-xl font-semibold transition-all">
                 Share Your Story
             </a>
