--- a/src/privacy.html
+++ b/src/privacy.html
@@ -6,11 +6,11 @@ banner:
   variant: "hero"
   title: "Privacy Policy"
   subtitle: "How we collect, use, and protect your personal information when providing housing support for families and veterans."
-  image: "banners/hero-privacy-banner.webp"
+  image: "hero-privacy-banner.webp"
   eyebrow: "Data Privacy"
   showVoucherBadge: false
   ctaText: "Contact Us"
-  ctaHref: "/contact.html"
+  ctaHref: "/contact/"
 ---
 
         <!-- Privacy Content -->
