--- a/src/projects/tyler-ranch-home/index.html
+++ b/src/projects/tyler-ranch-home/index.html
@@ -5,7 +5,7 @@ description: "Award-winning 3BR/2BA renovated ranch home in Tyler, TX. Premium r
 banner:
   title: "Tyler Ranch Home"
   subtitle: "Premium renovations meet fair pricing. Section 8 ready 3BR/2BA ranch home perfect for families."
-  image: "hero-property-fallback.webp"
+  image: "hero-property-banner.webp"
   eyebrow: "Fair Market • Premium Renovations"
 ---
 
@@ -247,7 +247,7 @@ banner:
                         <label for="veteran" class="text-sm text-slate-700">U.S. Military Veteran</label>
                     </div>
 
-                    <button type="submit" class="btn-base btn-primary w-full rounded-lg py-3">
+                    <button type="submit" class="w-full inline-flex items-center justify-center gap-2 px-8 py-4 text-base min-w-[200px] bg-gradient-to-br from-brand-wood to-brand-walnut text-brand-navy border-brand-walnut hover:from-brand-walnut hover:to-brand-wood hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0 inline-flex items-center justify-center gap-2 border transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-wood focus-visible:ring-offset-2 rounded-lg font-semibold">
                         Request Affordable Housing Tour
                     </button>
                 </form>
