--- a/src/terms.html
+++ b/src/terms.html
@@ -6,11 +6,11 @@ banner:
   variant: "hero"
   title: "Terms of Service"
   subtitle: "Fair housing terms and conditions for veteran and family housing assistance services."
-  image: "banners/hero-legal-banner.webp"
+  image: "hero-legal-banner.webp"
   eyebrow: "Legal Terms"
   showVoucherBadge: false
   ctaText: "Contact Us"
-  ctaHref: "/contact.html"
+  ctaHref: "/contact/"
 ---
 
         <!-- Terms Content -->
