--- a/src/transparency.html
+++ b/src/transparency.html
@@ -111,13 +111,15 @@ banner:
                     </li>
                 </ul>
             </div>
-            <div class="card-elevated bg-slate-100 rounded-xl p-8">
+            <div class="bg-slate-100 border-b-4 border-b-brand-wood p-6 rounded-lg shadow-wood">
                 <h3 class="text-xl font-bold text-brand-navy mb-4">Inspection Guarantee</h3>
                 <p class="text-sm text-slate-600 mb-6">
                     Our properties are pre-inspected to pass Section 8 HQS (Housing Quality Standards)
                     on the first visit. We fix issues before you ever see them.
                 </p>
-                <a href="/projects/" class="btn-primary w-full block text-center py-3 rounded-lg text-white font-bold">Find a Certified Home</a>
+                <div class="bg-gradient-to-br from-brand-wood to-brand-walnut text-brand-navy px-6 py-3 rounded-lg font-semibold text-center w-full inline-flex items-center justify-center transition-all duration-300 hover:from-brand-walnut hover:to-brand-wood hover:shadow-lg hover:-translate-y-0.5">
+                    <a href="/projects/" class="w-full block">Find a Certified Home</a>
+                </div>
             </div>
         </div>
     </div>
