--- a/src/404.html
+++ b/src/404.html
@@ -26,8 +26,8 @@ ctaHref: "/"
             Here are some helpful links to get you where you need to go.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="/projects.html" class="btn-primary px-8 py-3 rounded-lg text-white font-bold">Browse Properties</a>
-            <a href="/contact.html"
+            <a href="/projects/" class="btn-primary px-8 py-3 rounded-lg text-white font-bold">Browse Properties</a>
+            <a href="/contact/"
                 class="btn-secondary px-8 py-3 rounded-lg border-2 border-brand-navy text-brand-navy font-bold">Contact
                 Us</a>
         </div>
