--- a/src/projects/marshall-townhome/index.html
+++ b/src/projects/marshall-townhome/index.html
@@ -3,14 +3,12 @@ layout: base.njk
 title: "Marshall Townhome - Modern Living with Community Amenities"
 description: "Modern 2BR townhome in Marshall, Texas. Energy efficient with community pool access. Perfect for families seeking quality living."
 banner:
-  variant: hero
-  title: "Affordable Homes for Families & Veterans in East Texas"
-  subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride."
-  image: "banners/hero-property-fallback.webp"
-  eyebrow: "HUD-VASH & Section 8 Approved"
-  showVoucherBadge: true
-  ctaText: "Browse Homes for Families & Veterans"
-  ctaHref: "/get-started.html"
+  title: "Marshall Townhome"
+  subtitle: "Modern 3BR townhome with community amenities and energy-efficient design."
+  image: "hero-property-banner.webp"
+  eyebrow: "Community Living • Section 8 Ready"
+  ctaText: "Request Tour"
+  ctaHref: "/contact/"
 ---
 
 {% block head %}
@@ -82,7 +80,9 @@ banner:
                     <input type="text" id="townhome-name" name="name" required class="w-full border p-2 rounded">
                     <label for="townhome-email" class="block text-sm font-medium text-slate-700 mb-1">Email</label>
                     <input type="email" id="townhome-email" name="email" required class="w-full border p-2 rounded">
-                    <button type="submit" class="btn-primary w-full rounded-lg py-3 text-white font-bold">Request Tour</button>
+                    <button type="submit" class="w-full inline-flex items-center justify-center gap-2 px-8 py-4 text-base min-w-[200px] bg-gradient-to-br from-brand-wood to-brand-walnut text-brand-navy border-brand-walnut hover:from-brand-walnut hover:to-brand-wood hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0 inline-flex items-center justify-center gap-2 border transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-wood focus-visible:ring-offset-2 rounded-lg font-semibold">
+                        Request Tour
+                    </button>
                 </form>
             </div>
         </div>
