--- a/src/thank-you.html
+++ b/src/thank-you.html
@@ -45,10 +45,10 @@ description: "Message successfully sent. Thank you for contacting Properties 4 C
                 </div>
 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="/projects.html" class="wood-gradient-button px-8 py-4 rounded-xl font-semibold shadow-wood hover:shadow-xl transition-all">
+                    <a href="/projects/" class="wood-gradient-button px-8 py-4 rounded-xl font-semibold shadow-wood hover:shadow-xl transition-all">
                         Browse Properties
                     </a>
-                    <a href="/contact.html" class="px-8 py-4 border-2 border-brand-navy text-brand-navy hover:bg-brand-navy hover:text-white rounded-xl font-semibold transition-all">
+                    <a href="/contact/" class="px-8 py-4 border-2 border-brand-navy text-brand-navy hover:bg-brand-navy hover:text-white rounded-xl font-semibold transition-all">
                         Browse Homes for Families & Veterans
                     </a>
                 </div>
